changes to structure, styling, and responsiveness

--- a/aboutus.html
+++ b/aboutus.html
@@ -39,7 +39,7 @@
         </div>
     </main>
     <footer>
-        <section>
+        <section class="doc-links">
             <h2>Project Plan</h2>
             <h2>Wireframe</h2>
             <h2>UX Report</h2>
