--- a/chinatown.html
+++ b/chinatown.html
@@ -21,14 +21,14 @@
             <h1>Asian Garden Restaurant</h1>
         </div>
         <div class="address">
-            <h1>28 Harrison Ave. Boston, MA 02111-2025</h1>
-            <figure>
+            <h1>28 Harrison Ave. Boston, MA 02111</h1>
+            <figure class="address-figure">
                 <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
                 <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
                 <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
         </div>
-        <div class="to-restaurant-video"> <video width="40%" height="auto" controls muted>
+        <div class="to-restaurant-video"> <video width="100%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video> <p class="video-description">en-route to asian garden</p></div>
@@ -38,18 +38,22 @@
     <div class="introduction">
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. </h2>
         <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
+    </div> 
+    <div class="walk-through">
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
         <figure>
             <img class="inside1" src="assets/inside of restaurant.png" alt="inside of the restaurant with dividers"> 
             <figcaption class="inside-caption"> inside of asian garden </figcaption>
         </figure>
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
-    </div> 
+    </div>
     <div class="profile">
      <h3> About the Business Owner </h3>
-     <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
-     <img class="star-ag" src="assets/icons8-star-96.png"> 
-     <img class="star-ag2" src="assets/icons8-star-96.png">
+     <div class="owner-pic">
+        <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
+        <img class="star-ag" src="assets/icons8-star-96.png"> 
+        <img class="star-ag2" src="assets/icons8-star-96.png">
+     </div>
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded <span>“Because cooking is my passion”</span>.</p>
      <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
@@ -72,18 +76,17 @@
      <h3>Here's How You Can Help</h3>
      <figure>  
         <img class="takeout" src="assets/IMG_3527 2.png" alt="picture of walnut shrimp and stir fry beef with pepper takeout">
-        <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
-        <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
+        <figcaption class="take-out-caption"> walnut shrimp and stir fry beef with peppers</figcaption>
     </figure> 
         <ul class="rest-support-list">
             <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or dine-in. </li>
-            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> </button>
+            <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> 
             <li class="list-support">Donate to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. </li>
-            <button class="support-AG"> <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button>
+            <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> 
             <li class="list-support">Share this website on your social media. </li>
-            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button>  
+            <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> 
             <li class="list-support">Learn more about other local minority businesses. Read about El Penol, a Latinx restaurant in East Boston. </li>
-            <button class="support-AG"> <a class="support-button" href="eastboston.html"> Read about El Penol </a> </a> </button> 
+            <a class="support-button" href="eastboston.html"> Read about El Penol </a> 
         </ul>
     </div>
     <div class="foo-ag blue"> </div>
