--- a/eastboston.html
+++ b/eastboston.html
@@ -22,16 +22,16 @@
         </div>
         <div class="address">
             <h1>54 Bennington Street Boston, Massachusetts  02128</h1>
-            <figure>
+            <figure class="address-figure">
                 <img class="restaurant-image" src="assets/el penol restaurant.png"> 
                 <figcaption class="rest-image-caption"> the front of the store</figcaption>
                 <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
         </div>
-        <div class="to-restaurant-video"> <video width="40%" height="auto" controls muted>
+        <div class="to-restaurant-video"> <video width="100%" height="auto" controls muted>
             <source src="assets/walking to el polon.mp4" type="video/mp4">
           Your browser does not support the video tag.
-          </video> <p class="video-description">en-route to el pelon</p>
+          </video> <p class="video-description">en-route to el penol</p>
         </div>
     </header>
 
@@ -40,6 +40,8 @@
             <h2> El Penol is a local, family-run, Colombian restaurant located at 54 Bennington St, Boston, MA 02128 in East Boston.
             <h2>They serve authentic Colombian food, and they’re known for their famous dish, the Bandejo Penol. </h2> 
             <h2>They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years. </h2>  
+        </div> 
+        <div class="walk-through">
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
             <figure>
@@ -47,12 +49,14 @@
                 <figcaption class="inside-caption"> inside of el penol </figcaption>
             </figure>
             <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re <span>family</span>, and the smell of <span>really good food.</span>  </p>
-        </div> 
+        </div>
         <div class="profile">
          <h3> About the Business Owner </h3>
-         <img class="owner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
-         <img class="star-ag" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
-         <img class="star-ag2" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
+         <div class="owner-pic">
+            <img class="elpelon-owner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
+            <img class="star-ag3" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
+            <img class="star-ag4" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
+         </div>
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
         <div class="impact">
@@ -70,28 +74,26 @@
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
-         <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” <br> <cite> -Johan Medina, El Penol’s manager and grandson of Marina’s.</cite> </blockquote>
+         <blockquote class=eb-quote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Penol’s manager and grandson of Marina’s.</cite> </blockquote>
         </div> 
         <div class="support"> 
          <h3>Here's How You Can Help</h3>
          <figure>  
             <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png" alt="picture of the bendjo penol plate">
             <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
-            <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
         </figure>
          <ul class="rest-support-list">
             <li class="list-support">Get your next meal at El Penol in East Boston. </li>
-            <button class="support-AG"> <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a> </button> 
+            <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a> 
             <li class="list-support">Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
-            <button class="support-AG"> <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a> </button> 
+            <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a>  
             <li class="list-support">Spread the word. Share this website on your social media. </li>
-            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button> 
+            <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> 
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <li class="list-support">Learn more about other local minority businesses. Read about Asian Garden, a Chinese restaurant in Chinatown. </li>
-            <button class="support-AG"> <a class="support-button" href="chinatown.html"> Learn </a> </a> </button> 
+             <a class="support-button" href="chinatown.html"> Learn </a> </a> 
          </ul>
-        
         </div>
         <div class="foo-eb blue"> </div>
      </main>
