--- a/index.html
+++ b/index.html
@@ -37,53 +37,23 @@
         </div>
         <div class="overview-part-2">
             <p> You can see the disparity within each neighborhood. Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
-            <div class='tableauPlaceholder' id='viz1618180760552' style='position: relative'> 
-                <noscript><a href='https:&#47;&#47;www.bostonmagazine.com&#47;'>
-                    <img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1&#47;1_rss.png' style='border: none' />
-                    </a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-                            <param name='embed_code_version' value='3' /> 
-                            <param name='path' value='views&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1?:embed=y&amp;:toolbar=yes&amp;:embed_code_version=3&amp;:loadOrderID=0&amp;:display_count=yes&amp;:tabs=no' />
-                             <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1&#47;1.png' /> 
-                             <param name='animate_transition' value='yes' />
-                             <param name='display_static_image' value='yes' />
-                             <param name='display_spinner' value='yes' />
-                             <param name='display_overlay' value='yes' />
-                             <param name='display_count' value='yes' />
-                             <param name='tabs' value='no' />
-                            </object>
-                </div>                
-                    <script type='text/javascript'> 
-                    var divElement = document.getElementById('viz1618180760552');
-                    var vizElement = divElement.getElementsByTagName('object')[0]; 
-                        if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='970px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='887px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-                        else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='970px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='887px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-                        else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-                    </script>
-                </div> 
-        
         </div>  
         
             <div class="overview-part-3">
                 <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
                 <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
-                <div class="foo3"></div>
-                <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
-                    The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -Suzanne P. Clark, president of the U.S. Chamber</>
-                </blockquote>
+                    <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
+                        The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -Suzanne P. Clark, president of the U.S. Chamber</div>
+                    </blockquote>
             </div>
         </div>
 
         <div class="cta-section"> 
             <h3> Learn More About the Local Businesses in Boston</h3>
-            <div class="map">
-                <img class="map-image" src="assets/neighborhood map.jpg">  
-            </div>
-            <div class="circle1"></div>
-            <div class="circle2"></div>
             <div class="cta"> 
-                <button class="chinatown-button"> <a class="bottom-cta" href="chinatown.html">Asian Garden in Chinatown</a> </button>
-                <button class="revere-button"> <a class="bottom-cta" href="eastboston.html">El Penol in East Boston</a> </button>
+                <button class="restaurant-button"> <a class="bottom-cta" href="chinatown.html">Asian Garden in Chinatown</a> </button>
+                <button class="restaurant-button"> <a class="bottom-cta" href="eastboston.html">El Penol in East Boston</a> </button>
             </div>
         </div>
     </main>
@@ -101,3 +71,19 @@
 
 
 
+ <!-- 
+     {<div class='tableauPlaceholder' id='viz1618180760552' style='position: relative'> 
+    <noscript><a href='https:&#47;&#47;www.bostonmagazine.com&#47;'>
+        <img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1&#47;1_rss.png' style='border: none' />
+        </a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                <param name='embed_code_version' value='3' /> 
+                <param name='path' value='views&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1?:embed=y&amp;:toolbar=yes&amp;:embed_code_version=3&amp;:loadOrderID=0&amp;:display_count=yes&amp;:tabs=no' />
+                 <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1&#47;1.png' /> 
+                 <param name='animate_transition' value='yes' />
+                 <param name='display_static_image' value='yes' />
+                 <param name='display_spinner' value='yes' />
+                 <param name='display_overlay' value='yes' />
+                 <param name='display_count' value='yes' />
+                 <param name='tabs' value='no' />
+                </object>  
+ -->
