--- a/chinatown.html
+++ b/chinatown.html
@@ -23,10 +23,13 @@
         <div class="address">
             <h1>28 Harrison Ave. Boston, MA 02111</h1>
             <figure class="address-figure">
+                 <div class="arrow-group">
+                    <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
+                    <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
+                 </div>
                 <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
-                <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
-                <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
-            </figure>
+        
+                </figure>
         </div>
         <div class="to-restaurant-video"> <video width="100%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
@@ -51,8 +54,6 @@
      <h3> About the Business Owner </h3>
      <div class="owner-pic">
         <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
-        <img class="star-ag" src="assets/icons8-star-96.png"> 
-        <img class="star-ag2" src="assets/icons8-star-96.png">
      </div>
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded <span>“Because cooking is my passion”</span>.</p>
