--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
         <div class="cta-section"> 
             <h3> Learn More About the Local Businesses in Boston</h3>
+            <img class="neighborhood-map" src="assets/map of neighborhood.png">
             <div class="cta"> 
                 <button class="restaurant-button"> <a class="bottom-cta" href="chinatown.html">Asian Garden in Chinatown</a> </button>
                 <button class="restaurant-button"> <a class="bottom-cta" href="eastboston.html">El Penol in East Boston</a> </button>
