--- a/eastboston.html
+++ b/eastboston.html
@@ -23,8 +23,10 @@
         <div class="address">
             <h1>54 Bennington Street Boston, Massachusetts  02128</h1>
             <figure class="address-figure">
-                <figcaption class="rest-image-caption"> the front of the store</figcaption>
-                <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
+                <div class="arrow-group">
+                    <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
+                    <figcaption class="rest-image-caption"> the front of the store</figcaption>
+                </div>
                 <img class="restaurant-image" src="assets/el penol restaurant.png"> 
             </figure>
         </div>
