--- a/eastboston.html
+++ b/eastboston.html
@@ -44,7 +44,7 @@
             <h2>They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years. </h2>  
         </div> 
         <div class="walk-through">
-            <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
+            <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the family. </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
             <figure>
                 <img class="inside1" src="assets/IMG_1560.png">
