added javacsript carousel and social media buttons

--- a/chinatown.html
+++ b/chinatown.html
@@ -72,26 +72,43 @@
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. </p>
     </div> 
-    <div class="support"> 
-     <h3>Here's How You Can Help</h3>
-     <figure>  
-        <img class="takeout" src="assets/IMG_3527 2.png" alt="picture of walnut shrimp and stir fry beef with pepper takeout">
-        <figcaption class="take-out-caption"> walnut shrimp and stir fry beef with peppers</figcaption>
-    </figure> 
+    <div class="support">
+        <h3>Here's How You Can Help</h3>
+        <figure>
+            <img class="takeout" src="assets/IMG_3527 2.png"
+                alt="picture of walnut shrimp and stir fry beef with pepper takeout">
+            <figcaption class="take-out-caption"> walnut shrimp and stir fry beef with peppers</figcaption>
+        </figure>
         <ul class="rest-support-list">
-            <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or dine-in. </li>
-            <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> 
-            <li class="list-support">Donate to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. </li>
-            <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> 
-            <li class="list-support">Share this website on your social media. </li>
-            <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> 
-            <li class="list-support">Learn more about other local minority businesses. Read about El Penol, a Latinx restaurant in East Boston. </li>
-            <a class="support-button" href="eastboston.html"> Read about El Penol </a> 
-        </ul>
+            <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or
+                dine-in. </li>
+            <a class="support-button" href="https://www.asiangardenboston.com/">Support</a>
+            <li class="list-support">Donate to the Asian Community Emergency Relief Fund. Funds will be distributed
+                to Asian community members in need. </li>
+            <a class="support-button"
+                href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a>
+             <li class="list-support">Learn more about other local minority businesses. Read about El Penol, a
+                Latinx Restaurant in East Boston </li>
+            <a class="support-button" href="eastboston.html"> Learn </a> </a>
+            <li class="list-support">Spread the word. Share this website on your social media. </li>
+            <div class="social-media-buttons">
+                <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous"
+                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="05brBWaQ"></script>
+            <div class="fb-share-button"
+                    data-href="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-layout="button" data-size="large"><a target="_blank"
+                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fselinal552.github.io%2Fcovid19-impacts-on-local-businesses%2Feastboston.html&amp;src=sdkpreparse"
+                    class="fb-xfbml-parse-ignore">Share</a></div>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous"
+                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="LLGmSjzK"></script>
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
+                    data-text="Check out el penol at East Boston! "
+                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-show-count="false">Tweet</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    <div class="foo-ag blue"> </div>
- </main>
-
 <footer></footer>
 
 </html>
