--- a/eastboston.html
+++ b/eastboston.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: El Penol in East Boston</title>
+     <!-- for the carousel -->
+     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
 
   <body>  
@@ -76,24 +79,58 @@
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
          <blockquote class=eb-quote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Penol’s manager and grandson of Marina’s.</cite> </blockquote>
         </div> 
-        <div class="support"> 
-         <h3>Here's How You Can Help</h3>
-         <figure>  
-            <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png" alt="picture of the bendjo penol plate">
-            <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
-        </figure>
-         <ul class="rest-support-list">
-            <li class="list-support">Get your next meal at El Penol in East Boston. </li>
-            <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a> 
-            <li class="list-support">Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
-            <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a>  
-            <li class="list-support">Spread the word. Share this website on your social media. </li>
-            <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> 
-            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            <li class="list-support">Learn more about other local minority businesses. Read about Asian Garden, a Chinese restaurant in Chinatown. </li>
-             <a class="support-button" href="chinatown.html"> Learn </a> </a> 
-         </ul>
+
+         <!-- carousel starts -->
+
+         <div class="carousel">
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+
+        </div>
+
+
+        <!-- carousel ends -->
+
+
+        <div class="support">
+            <h3>Here's How You Can Help</h3>
+            <figure>
+                <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png"
+                    alt="picture of the bendjo penol plate">
+                <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
+            </figure>
+            <ul class="rest-support-list">
+                <li class="list-support">Get your next meal at El Penol in East Boston. </li>
+                <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a>
+                <li class="list-support">Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx
+                    community members and small businesses around the country in need. Click the button to donate. </li>
+                <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a>
+                <li class="list-support">Learn more about other local minority businesses. Read about Asian Garden, a
+                    Chinese restaurant in Chinatown. </li>
+                <a class="support-button" href="chinatown.html"> Learn </a> </a>
+                <li class="list-support">Spread the word. Share this website on your social media. </li>
+                <div class="social-media-buttons">
+                    <div id="fb-root"></div>
+                <script async defer crossorigin="anonymous"
+                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="05brBWaQ"></script>
+                <div class="fb-share-button"
+                    data-href="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-layout="button" data-size="large"><a target="_blank"
+                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fselinal552.github.io%2Fcovid19-impacts-on-local-businesses%2Feastboston.html&amp;src=sdkpreparse"
+                        class="fb-xfbml-parse-ignore">Share</a></div>
+                <div id="fb-root"></div>
+                <script async defer crossorigin="anonymous"
+                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="LLGmSjzK"></script>
+                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
+                    data-text="Check out el penol at East Boston! "
+                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-show-count="false">Tweet</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+            </ul>
         </div>
         <div class="foo-eb blue"> </div>
      </main>
