changes to java

--- a/eastboston.html
+++ b/eastboston.html
@@ -134,6 +134,14 @@
         </div>
         <div class="foo-eb blue"> </div>
      </main>
+
+      <!-- for the carousel -->
+     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+     <script src="slick/slick.min.js"></script>
+     <script src="scripts\carousel.js"></script>
+
+
  </body>
  
  <footer></footer>
