--- a/chinatown.html
+++ b/chinatown.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
+      <!-- for the carousel -->
+      <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+      <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
 
   <body>  
@@ -72,6 +75,21 @@
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. </p>
     </div> 
+
+         <!-- carousel starts -->
+
+         <div class="carousel">
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+
+        </div>
+
+
+        <!-- carousel ends -->
+
     <div class="support">
         <h3>Here's How You Can Help</h3>
         <figure>
@@ -108,7 +126,21 @@
                     data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
                     data-show-count="false">Tweet</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+        </div>
+    </ul>
+</div>
+<div class="foo-eb blue"> </div>
+</main>
+
+<!-- for the carousel -->
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="slick/slick.min.js"></script>
+<script src="scripts\carousel.js"></script>
+
+
+</body>
+
 <footer></footer>
 
 </html>
